--- a/maven/plugin/mvn-properties/container/pom.xml
+++ b/maven/plugin/mvn-properties/container/pom.xml
@@ -8,16 +8,17 @@
 		<version>0.0.0-SNAPSHOT</version>
 	</parent>
 
+	<groupId>de.dbo.tools.maven.plugin.test</groupId>
 	<artifactId>container</artifactId>
 	<name>Tools Maven Plugins - Properties Container</name>
 	<description>
-Properties container (JAR with properties-file as a resource)
-This artifcat is only used as a parameter in the usage
+Trivial test artifact with properties container (JAR with properties-file as a resource)
+It is only used as a parameter in the usage-test
 	</description>
 
 	<build>
 		<plugins>
-			<!-- There is nothing to run and/or to test -->
+			<!-- There is nothing to run and/or to test! -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
