logging is complete

--- a/logging/src/main/resources/dbo.log4j.properties
+++ b/logging/src/main/resources/dbo.log4j.properties
@@ -1,5 +1,9 @@
 
-log4j.logger.de.dbo.tools.utils.print=DEBUG, CONSOLE
+##
+## DEFAULT LOG4J-LOGGER CONFIGURATION
+##
+
+log4j.logger.de.dbo=INFO, CONSOLE
 log4j.rootLogger=WARN, CONSOLE_ERROR
 
 # ==============================================================================================================
@@ -68,4 +72,4 @@ log4j.appender.LOGSTASH.RemoteHost=localhost
 log4j.appender.LOGSTASH.Port=4560
 log4j.appender.LOGSTASH.Threshold=DEBUG
 log4j.appender.LOGSTASH=org.apache.log4j.net.SocketAppender
-log4j.appender.LOGSTASH.ReconnectionDelay=6000
+log4j.appender.LOGSTASH.ReconnectionDelay=5000
