--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -24,6 +24,10 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>uk.org.lidalia</groupId>
+			<artifactId>sysout-over-slf4j</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
