maven.pom: important restucturing done

--- a/maven/pom/src/test/resources/log4j.properties
+++ b/maven/pom/src/test/resources/log4j.properties
@@ -23,7 +23,7 @@ log4j.appender.CONSOLE_FINE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE_FINE.threshold=TRACE
 log4j.appender.CONSOLE_FINE.target=System.out
 log4j.appender.CONSOLE_FINE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE_FINE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p %30c{1}: (%F:%L)%n
+log4j.appender.CONSOLE_FINE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p %30c{1}: %m (%F:%L)%n
 log4j.appender.CONSOLE_FINE.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.CONSOLE_FINE.filter.filter1.levelMin=TRACE
 log4j.appender.CONSOLE_FINE.filter.filter1.levelMax=INFO
