--- a/maven/pom/pom.xml
+++ b/maven/pom/pom.xml
@@ -29,6 +29,10 @@
 			<groupId>de.dbo.tools</groupId>
 			<artifactId>resources</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 	</dependencies>
 
 
