eclispe pom make-up

--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -6,14 +6,15 @@
 		<groupId>de.dbo.root</groupId>
 		<artifactId>root</artifactId>
 		<version>0.0.0-SNAPSHOT</version>
-		<relativePath></relativePath>
+		<relativePath/>
 	</parent>
-	<groupId>de.dbo.tools</groupId>
-	<artifactId>logging</artifactId>
-	<packaging>jar</packaging>
 	
 	<name>Tools Logging</name>
 	<description>Logging</description>
+	
+	<groupId>de.dbo.tools</groupId>
+	<artifactId>logging</artifactId>
+	<packaging>jar</packaging>
 	
 	<dependencies>
 		<dependency>
