--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
+	
+	<name>Tools Installer</name>
+	<description>
+Reactor to install all of tools-modules.
+Any tool-module uses the dbo-root as its parent
+	</description>
+	
 	<groupId>de.dbo.tools</groupId>
 	<artifactId>tools-reactor</artifactId>
 	<version>0.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Tools Installer</name>
-	<description>
-Installation of tools-modules
-	</description>
  
 	<modules>
 		<module>utils</module>
